--- a/templates/login.html
+++ b/templates/login.html
@@ -23,6 +23,7 @@
 			<p><span>Secure</span>Login</p>
 			<input class="user" type="text" name="username" placeholder="Username">
 			<input class="pass" type="password" name="password" required="True" placeholder="Password">
+			<input class="number" type="text" name="uid" placeholder="UID">
 			<button class="submit" type="submit">Submit</button>
 		</form>
 	</div>
