--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Login from location</title>
+	<meta name="google-site-verification" content="DnzL6tfPAsp6xsVxB8jJ1lTbf-c0WE17ySbql2HChY4" />
 
     <!-- styles -->
     <link rel="stylesheet" href="/static/css/styles/main.css">
