--- a/static/css/styles/account.css
+++ b/static/css/styles/account.css
@@ -111,6 +111,7 @@ span {
     font-size: 1.2em;
     font-family: montserrat, sans-serif;
     font-weight: 400;
+    text-transform: capitalize;
 }
 
 .locations {
