--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,6 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Login from location</title>
-	<meta name="google-site-verification" content="DnzL6tfPAsp6xsVxB8jJ1lTbf-c0WE17ySbql2HChY4" />
 
     <!-- styles -->
     <link rel="stylesheet" href="/static/css/styles/index.css">
@@ -20,8 +19,8 @@
 <body>
 	<div class="content">
 		<form class="row" method="POST" action="/">
-			<input id="lat" type="number" name="lat">
-			<input id="lng" type="number" name="lng">
+			<input id="lat" type="text" name="lat">
+			<input id="lng" type="text" name="lng">
 		</form>
 
 	</div>
